# simple-qrunnable

./: README.md  pyproject.toml
simple_qrunnable/: __init__.py  lib.py
tests/: test_base.py
