[tool.poetry]
name = "simple_qrunnable"
version = "0.1.0"
description = ""
authors = ["Maxim Slipenko <no-reply@maxim.slipenko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
PySide6 = "^6.7.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
